--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-var 
 
 #rew{
     color: black;
@@ -75,9 +74,16 @@ var
         display: contents; 
      } 
      
-    
+}
+@media (max-width:768px){
+    .sectioncolumns{
+        flex-direction: column-reverse;
+    }
+
 
 }
+
+
 .socialmedia{
     font-size: 30px;
     padding: 20px;
@@ -99,6 +105,19 @@ var
     font-size: small;
     color: black;
 }
+.button button{
+    background-color: transparent;
+    border: 1px solid black;
+}
+
+
+#btn1{
+    background-color: white;
+}
+#btn2{
+    background-color: black;
+}
+
 
 
 
